--- a/templates/actor/npc/header.hbs
+++ b/templates/actor/npc/header.hbs
@@ -188,22 +188,22 @@
           <div class='resources grid grid-2col'>
             <div class="main grid-span-1">
               <div class='item-name rollable' data-roll-type='attack' data-action='roll' data-attack="melee">
-                <div>{{localize 'SDM.attacks.melee'}}</div>
+                <div>{{localize 'SDM.AttackMelee'}}</div>
               </div>
             </div>
             <div class="main grid-span-1">
               <div class='item-name rollable' data-roll-type='attack' data-action='roll' data-attack="ranged">
-                <div>{{localize 'SDM.attacks.ranged'}}</div>
+                <div>{{localize 'SDM.AttackRanged'}}</div>
               </div>
             </div>
             <div class="main grid-span-1">
               <div class='item-name rollable' data-roll-type='attack' data-action='roll' data-attack="fantascience">
-                <div>{{localize 'SDM.attacks.fantascience'}}</div>
+                <div>{{localize 'SDM.AttackFantascience'}}</div>
               </div>
             </div>
             <div class="main grid-span-1">
               <div class='item-name rollable' data-roll-type='attack' data-action='roll' data-attack="oldtech">
-                <div>{{localize 'SDM.attacks.oldtech'}}</div>
+                <div>{{localize 'SDM.AttackOldtech'}}</div>
               </div>
             </div>
           </div>
