refactor: :recycle: Refactored settings i18n and isoled some setup code

--- a/templates/chat/hero-dice-result.hbs
+++ b/templates/chat/hero-dice-result.hbs
@@ -78,7 +78,7 @@
         <section class="tooltip-part">
           <div class="dice">
             <header class="part-header">
-              <span class="part-formula">{{localize 'SMD.RollModifiers'}} ({{modifiers.formula}})</span>
+              <span class="part-formula">{{localize 'SDM.RollModifiers'}} ({{modifiers.formula}})</span>
             </header>
             <ol class="dice-rolls">
               <li><b>{{numberFormat modifiers.result sign=true}}</b></li>
