--- a/templates/actor/features.hbs
+++ b/templates/actor/features.hbs
@@ -26,9 +26,9 @@
     </section>
   </section> --}}
   <div class="grid grid-3col">
-    <div class="main grid-span-1">{{> "systems/sdm/templates/actor/gears.hbs"}}</div>
-    <div class="main grid-span-1">{{> "systems/sdm/templates/actor/traits.hbs"}}</div>
-    <div class="main grid-span-1">{{> "systems/sdm/templates/actor/burdens.hbs"}}</div>
+    <div class="main grid-span-1">{{> ($$ "actor/gears")}}</div>
+    <div class="main grid-span-1">{{> ($$ "actor/traits")}}</div>
+    <div class="main grid-span-1">{{> ($$ "actor/burdens")}}</div>
   </div>
   </div>
 </section>
