--- a/templates/actor/npc/header.hbs
+++ b/templates/actor/npc/header.hbs
@@ -27,11 +27,9 @@
             </label>
             <div class='resource-content flexrow flex-center flex-between'>
               {{#if isGM}}
-              <input type='text' name='system.player_experience' value='{{system.player_experience}}'
-                data-dtype='Text' />
+              <input type='text' name='system.player_experience' value='{{system.player_experience}}' />
               {{else}}
-              <input type='text' name='system.player_experience' value='{{system.player_experience}}' data-dtype='Text'
-                disabled />
+              <input type='text' name='system.player_experience' value='{{system.player_experience}}' disabled />
               {{/if}}
             </div>
           </div>
@@ -42,9 +40,9 @@
             </label>
             <div class='resource-content flexrow flex-center flex-between'>
               {{#if isGM}}
-              <input type='text' name='system.experience' value='{{system.experience}}' data-dtype='Text' />
+              <input type='text' name='system.experience' value='{{system.experience}}' />
               {{else}}
-              <input type='text' name='system.experience' value='{{system.experience}}' data-dtype='Text' disabled />
+              <input type='text' name='system.experience' value='{{system.experience}}' disabled />
               {{/if}}
             </div>
           </div>
@@ -99,7 +97,7 @@
             {{localize 'SDM.Actor.Character.FIELDS.friends.label'}}
           </label>
           <div class='resource-content flexrow flex-center flex-between'>
-            <input type='text' name='system.friends' value='{{system.friends}}' data-dtype='Text' />
+            <input type='text' name='system.friends' value='{{system.friends}}' />
           </div>
         </div>
         {{/if}}
@@ -110,7 +108,7 @@
             {{localize 'SDM.Actor.Character.FIELDS.enemies.label'}}
           </label>
           <div class='resource-content flexrow flex-center flex-between'>
-            <input type='text' name='system.enemies' value='{{system.enemies}}' data-dtype='Text' />
+            <input type='text' name='system.enemies' value='{{system.enemies}}' />
           </div>
         </div>
         {{/if}}
@@ -121,7 +119,7 @@
             {{localize 'SDM.Actor.Character.FIELDS.likes.label'}}
           </label>
           <div class='resource-content flexrow flex-center flex-between'>
-            <input type='text' name='system.likes' value='{{system.likes}}' data-dtype='Text' />
+            <input type='text' name='system.likes' value='{{system.likes}}' />
           </div>
         </div>
         {{/if}}
@@ -151,7 +149,7 @@
             {{localize 'SDM.Actor.Character.FIELDS.species.label'}}
           </label>
           <div class='resource-content flexrow flex-center flex-between'>
-            <input type='text' name='system.species' value='{{system.species}}' data-dtype='Text' />
+            <input type='text' name='system.species' value='{{system.species}}' />
           </div>
         </div>
         <div class='resource'>
@@ -159,7 +157,7 @@
             {{localize 'SDM.Actor.Character.FIELDS.looks.label'}}
           </label>
           <div class='resource-content flexrow flex-center flex-between'>
-            <input type='text' name='system.looks' value='{{system.looks}}' data-dtype='Text' />
+            <input type='text' name='system.looks' value='{{system.looks}}' />
           </div>
         </div>
         {{/if}}
