--- a/templates/item/header.hbs
+++ b/templates/item/header.hbs
@@ -12,7 +12,7 @@
       </div>
       <div class='resource'>
         <label class='resource-label'>{{localize 'SDM.Item.base.FIELDS.cost.label'}}</label>
-        <input type='text' name='system.cost' value='{{system.cost}}' data-dtype='Text' />
+        <input type='text' name='system.cost' value='{{system.cost}}'  />
       </div>
       <div class='resource'>
         <label class='resource-label'>{{localize 'SDM.Item.base.FIELDS.size.value.label'}}</label>
@@ -46,7 +46,7 @@
       {{#if system.is_weapon}}
       <fieldset>
         <legend>Weapon Damage</legend>
-        <input type='text' name='system.weapon_damage.base' value='{{system.weapon_damage.base}}' data-dtype='Text' />
+        <input type='text' name='system.weapon_damage.base' value='{{system.weapon_damage.base}}'  />
       </fieldset>
       {{/if}}
     </div>
