--- a/templates/transfer-dialog.hbs
+++ b/templates/transfer-dialog.hbs
@@ -1,14 +1,14 @@
 <form>
-  <h5>Transfer {{item.name}}</h5>
+  <h5>{{localize 'SDM.Transfer' type=item.name}}</h5>
   <div class="grid grid-2col flexcol">
     {{#if (eq item.system.size.unit "cash")}}
     <div class="form-group">
-      <label>Amount:</label>
+      <label>{{localize 'SDM.Amount'}}:</label>
       <input type="number" name="cashAmount" min="1" max="{{item.system.quantity}}" required data-type="Number" placeholder="100">
     </div>
     {{/if}}
     <div class="form-group">
-      <label>to:</label>
+      <label>{{localize 'SDM.TransferTo'}}:</label>
       <select name="targetActor">
         <option value=""></option>
         {{selectOptions actors valueAttr="id" labelAttr="name"}}
