--- a/templates/actor/npc/header.hbs
+++ b/templates/actor/npc/header.hbs
@@ -104,11 +104,11 @@
 
         {{#if (eq actor.type 'character')}}
         <div class='resource'>
-          <label for="system.enemies" class='resource-label'>
-            {{localize 'SDM.Actor.Character.FIELDS.enemies.label'}}
+          <label for="system.foes" class='resource-label'>
+            {{localize 'SDM.Actor.Character.FIELDS.foes.label'}}
           </label>
           <div class='resource-content flexrow flex-center flex-between'>
-            <input type='text' name='system.enemies' value='{{system.enemies}}' />
+            <input type='text' name='system.foes' value='{{system.foes}}' />
           </div>
         </div>
         {{/if}}
