--- a/src/scss/components/_forms.scss
+++ b/src/scss/components/_forms.scss
@@ -62,3 +62,11 @@
 .height-32 {
   height: 32px;
 }
+
+.grid-span-1.flexrow.flex-between {
+  gap: 15px;
+}
+
+.resources.grid.grid-5col {
+  margin-top: 0px;
+}
