--- a/src/scss/components/_sheet.scss
+++ b/src/scss/components/_sheet.scss
@@ -1,3 +1,7 @@
 @use '../utils/typography' as typo;
 @use '../utils/colors' as colors;
 @use '../utils/variables' as vars;
+
+.sheet-hero-dice {
+  margin-left: 5px;
+}
