--- a/templates/actor/burdens.hbs
+++ b/templates/actor/burdens.hbs
@@ -4,69 +4,43 @@
     <li class='item flexrow items-header'>
       <div class='item-name'></div>
       {{!-- <div class='item-formula'>{{localize 'SDM.Item.Gear.FIELDS.rollFormula.label'}}</div> --}}
-       <div class='item-formula'>{{localize 'SDM.InventoryBurdens'}} [{{@root.burdenSlotsTaken}}/{{@root.system.burden_slots}}]</div>
+      <div class='item-formula'>{{localize 'SDM.InventoryBurdens'}}
+        [{{@root.burdenSlotsTaken}}/{{@root.system.burden_slots}}]</div>
       <div class='item-controls'>
         {{#if @root.editable}}
-          <a
-            class='item-control item-create'
-            title='{{localize "DOCUMENT.Create" type='burden'}}'
-            data-action='createDoc'
-            data-document-class='Item'
-            data-type='burden'
-          >
-            <i class='fas fa-plus'></i>
-            {{localize 'DOCUMENT.New' type='burden'}}
-          </a>
+        <a class='item-control item-create' title="{{localize 'DOCUMENT.Create' type=(localize 'TYPE.Burden' )}}"
+          data-action='createDoc' data-document-class='Item' data-type='burden'>
+          <i class='fas fa-plus'></i>
+          {{localize 'DOCUMENT.New' type=(localize 'TYPE.Burden' )}}
+        </a>
         {{/if}}
       </div>
     </li>
     {{#each burdens as |burden id|}}
-      <li
-        class='item flexrow'
-        data-item-id='{{burden._id}}'
-        data-drag='true'
-        data-document-class='Item'
-      >
-        <div class='item-name'>
-          <div class='item-image'>
-              <img
-                src='{{burden.img}}'
-                title='{{burden.name}}'
-                width='24'
-                height='24'
-              />
-          </div>
-          <div >{{burden.name}}</div>
-          {{#if burden.system.is_skill}}
-            <a class='rollable' data-roll-type='attack' data-action='roll'>
-              <img
-                src='icons/weapons/swords/sword-simple-white.webp'
-                title='{{burden.name}}'
-                width='24'
-                height='24'
-              />
-            </a>
-          {{/if}}
+    <li class='item flexrow' data-item-id='{{burden._id}}' data-drag='true' data-document-class='Item'>
+      <div class='item-name'>
+        <div class='item-image'>
+          <img src='{{burden.img}}' title='{{burden.name}}' width='24' height='24' />
         </div>
-        <div class='item-controls'>
-          <a
-            class='item-control item-edit'
-            title='{{localize "DOCUMENT.Update" type='Burden'}}'
-            data-action='viewDoc'
-          >
-            <i class='fas fa-edit'></i>
-          </a>
-          {{#if @root.editable}}
-            <a
-              class='item-control item-delete'
-              title='{{localize "DOCUMENT.Delete" type='Burden'}}'
-              data-action='deleteDoc'
-            >
-              <i class='fas fa-trash'></i>
-            </a>
-          {{/if}}
-        </div>
-      </li>
+        <div>{{burden.name}}</div>
+        {{#if burden.system.is_skill}}
+        <a class='rollable' data-roll-type='attack' data-action='roll'>
+          <img src='icons/weapons/swords/sword-simple-white.webp' title='{{burden.name}}' width='24' height='24' />
+        </a>
+        {{/if}}
+      </div>
+      <div class='item-controls'>
+        <a class='item-control item-edit' title='{{localize "DOCUMENT.Update" type=' Burden'}}' data-action='viewDoc'>
+          <i class='fas fa-edit'></i>
+        </a>
+        {{#if @root.editable}}
+        <a class='item-control item-delete' title='{{localize "DOCUMENT.Delete" type=' Burden'}}'
+          data-action='deleteDoc'>
+          <i class='fas fa-trash'></i>
+        </a>
+        {{/if}}
+      </div>
+    </li>
     {{/each}}
   </ol>
 
