--- a/templates/actor/traits.hbs
+++ b/templates/actor/traits.hbs
@@ -4,60 +4,39 @@
     <li class='item flexrow items-header'>
       <div class='item-name'></div>
       {{!-- <div class='item-formula'>{{localize 'SDM.Item.Gear.FIELDS.rollFormula.label'}}</div> --}}
-      <div class='item-formula'>{{localize 'SDM.InventoryTraits'}} [{{@root.traitSlotsTaken}}/{{@root.system.trait_slots}}]</div>
+      <div class='item-formula'>{{localize 'SDM.InventoryTraits'}}
+        [{{@root.traitSlotsTaken}}/{{@root.system.trait_slots}}]</div>
       <div class='item-controls'>
         {{#if @root.editable}}
-          <a
-            class='item-control item-create'
-            title='{{localize "DOCUMENT.Create" type='trait'}}'
-            data-action='createDoc'
-            data-document-class='Item'
-            data-type='trait'
-          >
-            <i class='fas fa-plus'></i>
-            {{localize 'DOCUMENT.New' type='trait'}}
-          </a>
+        <a class='item-control item-create' title="{{localize 'DOCUMENT.Create' type=(localize 'TYPE.Trait' )}}" data-action='createDoc'
+          data-document-class='Item' data-type='trait'>
+          <i class='fas fa-plus'></i>
+          {{localize 'DOCUMENT.New' type=(localize 'TYPE.Trait' )}}
+        </a>
         {{/if}}
       </div>
     </li>
     {{#each traits as |trait id|}}
-      <li
-        class='item flexrow'
-        data-item-id='{{trait._id}}'
-        data-drag='true'
-        data-document-class='Item'
-      >
-        <div class='item-name'>
-          <div class='item-image'>
-              <img
-                src='{{trait.img}}'
-                title='{{trait.name}}'
-                width='24'
-                height='24'
-              />
-          </div>
-          <div>{{trait.name}} {{#if trait.system.is_skill}} (+{{trait.system.skill_mod_final}}){{/if}}
-          </div>
+    <li class='item flexrow' data-item-id='{{trait._id}}' data-drag='true' data-document-class='Item'>
+      <div class='item-name'>
+        <div class='item-image'>
+          <img src='{{trait.img}}' title='{{trait.name}}' width='24' height='24' />
         </div>
-        <div class='item-controls'>
-          <a
-            class='item-control item-edit'
-            title='{{localize "DOCUMENT.Update" type='Trait'}}'
-            data-action='viewDoc'
-          >
-            <i class='fas fa-edit'></i>
-          </a>
-          {{#if @root.editable}}
-            <a
-              class='item-control item-delete'
-              title='{{localize "DOCUMENT.Delete" type='Trait'}}'
-              data-action='deleteDoc'
-            >
-              <i class='fas fa-trash'></i>
-            </a>
-          {{/if}}
+        <div>{{trait.name}} {{#if trait.system.is_skill}} (+{{trait.system.skill_mod_final}}){{/if}}
         </div>
-      </li>
+      </div>
+      <div class='item-controls'>
+        <a class='item-control item-edit' title='{{localize "DOCUMENT.Update" type=' Trait'}}' data-action='viewDoc'>
+          <i class='fas fa-edit'></i>
+        </a>
+        {{#if @root.editable}}
+        <a class='item-control item-delete' title='{{localize "DOCUMENT.Delete" type=' Trait'}}'
+          data-action='deleteDoc'>
+          <i class='fas fa-trash'></i>
+        </a>
+        {{/if}}
+      </div>
+    </li>
     {{/each}}
   </ol>
 
